<resources>
<<<<<<< HEAD
    <string name="app_name">CarConfiguratorFinal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="textViewCompatSpinner"></string>

    <!-- Api key -->
    <string name="api_key1_configuration">d61dfa52-7db8-4688-ac7f-a7246b96c26b</string>
    <string name="api_key2_configuration"></string>
    <string name="api_key3_configuration"></string>

    <string name="api_key1_dealer">27ea6a7d-e247-480c-868b-c1fb8610c97b</string>

    <!-- Menu names-->
    <string name="car_dealer">Dealer</string>
    <string name="car_gallery">Gallery</string>
    <string name="car_news">News</string>

    <!-- Gallery -->
=======
    <string name="app_name">CarConfigurator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DAS project 2019</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="market_button">Market</string>
    <string name="market_textview_text"></string>
        <!--Choose Market</string>-->
    <string name="class_textview_text"></string>
    <!--Choose Car Class</string>-->
    <string name="model_textview_text"></string>
    <!--Choose Car Model</string>-->
    <string name="bodies_textview_text"></string>
    <!--Choose Body type</string>-->

    <string name="default_configuration_text"></string>
    <!--Default Configuration</string>-->
    <string name="configurator_api_key">31dc1e9a-e7bb-4b5c-a29e-0a359a98b420</string>
    <string name="country_string">Available countries</string>
    <string name="title_activity_model">ModelActivity</string>

    <!-- API -->
    <string name="default_api_url">https://api.mercedes-benz.com/</string>

    <!--Image key: d61dfa52-7db8-4688-ac7f-a7246b96c26b-->
    <!--Diler: 9c4df673-fca7-456b-ac70-c545749f179e-->
    <!--Configuration: d61dfa52-7db8-4688-ac7f-a7246b96c26b-->

    <!--IVAN-->
>>>>>>> bcda57d3eb0b751a6ac0ca8f24e33302536d103e
    <string name="rim">RIM</string>
    <string name="trim">TRIM</string>
    <string name="paint">PAINT</string>
    <string name="todo">TODO</string>
    <string name="gallery">GALLERY</string>
    <string name="engine">ENGINE</string>

<<<<<<< HEAD
    <!-- Gallery texts -->
    <string name="subtitle">GALLERY</string>
    <string name="engine_title">Engine</string>
    <string name="paint_title">Paint</string>
    <string name="rim_title">Rim</string>
    <string name="trim_title">Trim</string>

=======
>>>>>>> bcda57d3eb0b751a6ac0ca8f24e33302536d103e
</resources>
