<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView3"
        android:layout_alignTop="@+id/imageView3"
        android:layout_alignEnd="@+id/imageView3"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="-50dp"
        android:text="@string/trim"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="Trim" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView2"
        android:layout_alignTop="@+id/imageView2"
        android:layout_alignEnd="@+id/imageView2"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="29dp"
        android:text="@string/rim"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="Rim" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView1"
        android:layout_alignTop="@+id/textView1"
        android:layout_alignEnd="@+id/imageView1"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_marginStart="-3dp"
        android:layout_marginEnd="-3dp"
        android:layout_marginBottom="-45dp"
        android:text="@string/paint"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="Paint" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="129dp"
        android:layout_height="137dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="203dp"
        android:layout_marginTop="78dp"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="129dp"
        android:layout_height="137dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="295dp"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="129dp"
        android:layout_height="137dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="206dp"
        android:layout_marginTop="295dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textSize="40sp"
        android:textColor="#000"
        android:layout_centerHorizontal="true"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="129dp"
        android:layout_height="137dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="77dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="-4dp"
        android:layout_marginBottom="-46dp"
        android:text="@string/engine"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold" />
</RelativeLayout>