<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <!--<TextView android:id="@+id/text"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="This is a TextView" />-->

        <!--<Button android:id="@+id/button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="This is a Button" />-->

        <TextView
            android:id="@+id/market_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/market_textview_text" />

        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/market_spinner" />

        <TextView
            android:id="@+id/class_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/class_textview_text" />

        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/class_spinner" />

        <TextView
            android:id="@+id/car_bodies_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bodies_textview_text" />

        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bodies_spinner" />

        <TextView
            android:id="@+id/model_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/model_textview_text" />

        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/model_spinner" />

        <TextView
            android:id="@+id/configuration_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_configuration_text" />



        <!--<Button-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@+id/market_button"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:text="Drugo dugme"-->
            <!--tools:ignore="MissingConstraints"-->
            <!--tools:layout_editor_absoluteX="0dp"-->
            <!--tools:layout_editor_absoluteY="137dp" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Hello World!"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintLeft_toLeftOf="parent"-->
            <!--app:layout_constraintRight_toRightOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent" />-->


        <!-- More GUI components go here  -->

    </LinearLayout>



</android.support.constraint.ConstraintLayout>


